--------------------------------------------------------------------------------
MZK 07.01.2023 20:34:03 -0800 - build 6088

1. Fallout of 6078: fixed Alt+F7 behavior in Viewer Search.

--------------------------------------------------------------------------------
drkns 04.01.2023 21:08:06 +0000 - build 6087

1. gh-583: Submenus with keyboard accelerators display ampersand character in title.

--------------------------------------------------------------------------------
drkns 04.01.2023 18:55:21 +0000 - build 6086

1. gh-591: Duplicate keyboard accelerators in Sort modes.

2. gh-593: Cancelling a copy operation on a symlink creates a zero-byte file.

3. Refactoring.

--------------------------------------------------------------------------------
MZK 04.01.2023 10:26:26 -0800 - build 6085

1. Continuation of 6082. Changed tab order on Find File dialog.
   Now Text/Hex radio is the next after "Containing".

2. gh-592: Bug in 6082. Find File dialog: fixed disappearing searched text
   when pressing the Text/Hex hotkey which matches the current state.

--------------------------------------------------------------------------------
zg 04.01.2023 19:47:50 +0200 - build 6084

1. non tread safe code removed from ACTL_SYNCHRO implementation.

--------------------------------------------------------------------------------
yjh 04.01.2023 12:12:29 +0300 - build 6083

1. SQLite v3.40.1

--------------------------------------------------------------------------------
MZK 02.01.2023 11:22:16 -0800 - build 6082

1. Rearranged Text/Hex controls on Find File dialog.

--------------------------------------------------------------------------------
drkns 02.01.2023 18:55:18 +0000 - build 6081

1. gh-588: Default code page problem.

--------------------------------------------------------------------------------
drkns 02.01.2023 18:09:42 +0000 - build 6080

1. gh-587: Environment variables not expanded when editing links.
