@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+MZK 08.01.2023 09:26:22 -0800 - build 6089
+
+1. Viewer Search: minor refactoring.
+
+--------------------------------------------------------------------------------
 MZK 07.01.2023 20:34:03 -0800 - build 6088
 
 1. Fallout of 6078: fixed Alt+F7 behavior in Viewer Search.
